03-autoscaling/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # 自动扩容到 3 个副本
  selector:
    matchLabels:
      app: worker # 匹配标签为 app=worker 的 Pod
  template:
    metadata:
      labels:
        app: worker # 设置 Pod 的标签为 app=worker
    spec:
      containers:
        - name: worker # 容器名称为 worker
          imagePullPolicy: IfNotPresent
          image: feizhaoer/worker-demo:v0.0.1 # 容器镜像为 worker 版本 1.14.2
          volumeMounts: # 挂载点设置
            - name: config-volume # 存储卷的名称，与下面对应
              mountPath: /data/wwwroot/.env
              subPath: .env
              readOnly: true # 只读模式，不允许修改文件内容
      volumes: # 存储卷设置
        - name: config-volume # 存储卷的名称，与上面对应
          configMap: # 存储卷类型为 ConfigMap
            name: worker-config # ConfigMap 的名称，与之前创建时一致
            items:
              - key: env # ConfigMap 中的键名，与之前创建时一致
                path: .env # 文件名，在挂载点路径下生成这个文件
